# Codegym

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.bak  buildWin64.bat  genWin64.bat  rttr.CMakeLists.txt
Src/: CMakeLists.txt
Src/Configuration/: Prerequisites.h
Src/Editor/: CMakeLists.txt  EditorHelper.cpp  EditorHelper.h  WinMain.cpp
Src/Editor/Menu/: MenuItem.cpp  MenuItem.h  MenuManager.cpp  MenuManager.h  TestMenu.cpp
Src/Editor/Window/: HierarchyWindow.cpp  HierarchyWindow.h  InspectorWindow.cpp  InspectorWindow.h  MainWindow.cpp  MainWindow.h  ProjectWindow.cpp  ProjectWindow.h
Src/Editor/Window/Hierarchy/: HierarchyViewModel.cpp  HierarchyViewModel.h  HierarchyWindow.cpp  HierarchyWindow.h
Src/Editor/Window/Inspector/: DefaultInspector.cpp  DefaultInspector.h  InspectorEditor.cpp  InspectorEditor.h  InspectorWindow.cpp  InspectorWindow.h
Src/Editor/Window/Layout/: LayoutUtility.cpp  LayoutUtility.h
Src/Runtime/: Base.h  CMakeLists.txt  ExportTest.cpp  ExportTest.h  MemoryMacro.h  Std.h  Test.cpp
Src/Runtime/BaseClasses/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  Object.cpp  Object.h
Src/Runtime/Component/: Transform.cpp  Transform.h
Src/Runtime/Core/: Algo.h  Application.cpp  Application.h  Family.h  HashString.h  Ident.h  Monostate.h  TypeTraits.h  Utility.h
Src/Runtime/Core/OS/: Input.cpp  Input.h  KeyCodes.h  Window.cpp  Window.h
Src/Runtime/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Src/Runtime/ImGui/: ImGuiManager.cpp  ImGuiManager.h
Src/Runtime/Logging/: LogAssert.h
Src/Runtime/Macros/: CoreMacros.h  PropertyMacro.h  RttrMacro.h  TypeMacro.h
Src/Runtime/Manager/: BaseManger.cpp  BaseManger.h  EventManager.cpp  EventManager.h  ManagerContext.cpp  ManagerContext.h  ManagerMgr.cpp  ManagerMgr.h
Src/Runtime/Math/: FloatConversion.h  MathUtils.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Src/Runtime/Platform/: PlatformEnvironment.h
Src/Runtime/Platform/GLFW/: GLFWKeyCodes.h  GLFWWindow.cpp  GLFWWindow.h
Src/Runtime/Scene/: SceneGraph.cpp  SceneGraph.h
Src/Runtime/Signal/: Delegate.h  Dispatcher.h  Emitter.h  EventList.h  Fwd.h  Signal.h
Src/Runtime/Type/: Type.h  TypeTraits.h
Src/Runtime/Utilities/: TimeStep.h  Utility.cpp  Utility.h
Src/greeter/: greeter.cpp  greeter.h
Standalone/Source/: main.cpp
Tests/: CMakeLists.txt
all/: CMakeLists.txt
cmake/: CPM.cmake
cmake/modules/: CodegymDefaults.cmake  CodegymDist.cmake  CodegymMacros.cmake  ConfigQt5.cmake  CxxCompiler.cmake  QtPropertyBrowser.cmake  rttr.cmake
cmake/modules/QtPropertyBrowser/: QtPropertyBrowserTargets-debug.cmake  QtPropertyBrowserTargets-minsizerel.cmake  QtPropertyBrowserTargets-release.cmake  QtPropertyBrowserTargets-relwithdebinfo.cmake  QtPropertyBrowserTargets.cmake
cmake/modules/rttr/: rttr-config.cmake
src/: test.cpp
standalone/: CMakeLists.txt
tempa/: CMakeLists.txt  CMakeLists11.txt
tests/source/: greeter.cpp
